# diamond-mcp

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md  encyclopedia.json  facts.json  pyproject.toml  server.py  smoke_test.py
encyclopedia/: README.md  a-diamond-is-forever.md  annual-prong-check.md  asscher-cut.md  bezel-setting.md  bow-tie-effect.md  brilliance.md  carat.md  cathedral-setting.md  certification-labs.md  clarity-grade.md  cleaning-a-diamond-ring-at-home.md  color-grade.md  crown.md  cubic-zirconia.md  culet.md  cushion-cut.md  cut-grade.md  cvd-growth.md  depth-percentage.md  diamond-the-material.md  do-diamonds-come-from-coal.md  do-lab-grown-diamonds-cloud-or-fade.md  dutch-marquise.md  east-west-setting.md  elongated-cushion.md  emerald-cut.md  eye-clean.md  facet.md  finding-your-ring-size.md  fire-dispersion.md  fluorescence.md  ftc-definition-of-diamond-2018.md  girdle.md  grading-report.md  half-bezel.md  halo.md  hearts-and-arrows.md  hexagon-cut.md  hidden-halo.md  (+51 more)
node/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
node/scripts/: copy-data.mjs
node/src/: bin.ts  server.ts
node/test/: smoke.mjs
